--- a/E2ETesting/pom.xml
+++ b/E2ETesting/pom.xml
@@ -45,5 +45,10 @@
   		<artifactId>selenium-server</artifactId>
   		<version>3.0.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.poi</groupId>
+  		<artifactId>poi</artifactId>
+  		<version>3.16</version>
+  	</dependency>
   </dependencies>
 </project>
