--- a/SeleniumWithPipeline/pom.xml
+++ b/SeleniumWithPipeline/pom.xml
@@ -44,9 +44,8 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <projectName>shubhamksaxena</projectName>
-                            <outputDirectory>${project.build.directory}/cucumber-report-html</outputDirectory>
-                            <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
+                            <projectName>SeleniumWithPipeline</projectName>
+                
                         </configuration>
                     </execution>
                 </executions>
