--- a/SeleniumWithPipeline/pom.xml
+++ b/SeleniumWithPipeline/pom.xml
@@ -14,7 +14,7 @@
           <target>1.8</target>
         </configuration>
       </plugin>
-      <plugin>
+      </plugins>
 <groupId>org.apache.maven.plugins</groupId>
 <artifactId>maven-surefire-plugin</artifactId>
 <version>2.18.1</version>
