--- a/SeleniumWithPipeline/pom.xml
+++ b/SeleniumWithPipeline/pom.xml
@@ -14,11 +14,12 @@
           <target>1.8</target>
         </configuration>
       </plugin>
-<groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-surefire-plugin</artifactId>
-<version>2.18.1</version>
-<configuration>
-<suiteXmlFiles>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18.1</version>
+          <configuration>
+          <suiteXmlFiles>
 <!-- TestNG suite XML files -->
 <suiteXmlFile>login.xml</suiteXmlFile>
 </suiteXmlFiles>
@@ -29,6 +30,7 @@
            </configuration>
                
 </configuration>
+        </plugin>
     </plugins>
   </build>
   <dependencies>
